--- a/src/templates/reset.handlebars
+++ b/src/templates/reset.handlebars
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Hey {{ tag }}</h1>
-  You asked for a password reset<br />
-  If you did not initiate this, please ignore this mail<br />
-  You can reset your password <a href="{{ url }}">here</a>
-</body>
+<html lang='en'>
+  <head>
+    <meta charset='UTF-8' />
+    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Hey {{tag}}</h1>
+    You asked for a password reset<br />
+    If you did not initiate this, please ignore this mail<br />
+    You can reset your password
+    <a href='{{url}}'>here</a>
+  </body>
 </html>
