--- a/src/views/reset.handlebars
+++ b/src/views/reset.handlebars
@@ -1,3 +1,4 @@
-<body onload="window.open('smashpros://reset/{{ token }}')">
-  If you are not redirected, please click here <a href="smashpros://reset/{{ token }}"></a>
+<body onload="window.open('smashpros://reset/{{token}}')">
+  If you are not redirected, please click here
+  <a href='smashpros://reset/{{token}}'></a>
 </body>
